--- a/build.xml
+++ b/build.xml
@@ -3,41 +3,34 @@
 <!--
   - $Id$
   -
-  - Ant build script for iCal4j project. Targets include:
-  - 
-  - clean-compile: empty the bin directory
-  -
-  - compile: compiles all source (in the source folder)
-  -
-  - clean-package: empty the build directory
-  -
-  - package: package all classes in the bin directory to create a JAR in the build directory
-  -
-  - clean-javadoc: empty the javadoc directory
-  -
-  - javadoc: generates javadoc for all source files (in the source folder)
-  -
-  - dist-src: creates a zip archive of the source and javadocs
-  -
-  - dist: creates a zip archive of the binaries and javadocs
-  -
-  - dist-plugin: creates a zip archive of the binaries and javadocs for use as an eclipse plugin
+  - Ant build script for iCal4j project.
   -->
 <project name="iCal4j" basedir="." default="package">
 
-    <property name="project.version" value="0.9.12"/>
+	<!-- Project details -->
+    <property name="project.version" value="0.9.13"/>
+	
+	<!-- Project paths -->
     <property name="source.dir" location="source"/>
     <property name="test.source.dir" location="test"/>
     <property name="output.dir" location="bin"/>
+	
     <property name="package.dir" location="build"/>
     <property name="package.file" value="ical4j.jar"/>
+	
     <property name="javadoc.dir" location="docs/api"/>
     <property name="javadoc.packages" value="net.fortuna.ical4j.*"/>
+	
     <property name="dist.dir" location=".."/>
     <property name="dist.name" value="ical4j"/>
     <property name="dist.maven.file" value="${dist.name}-${project.version}-bundle.jar"/>
-    <property name="plugin.name" value="net.fortuna.ical4j"/>
+
+	<!-- Library paths -->
+    <property name="j2se.apiurl" value="http://java.sun.com/j2se/1.4/docs/api/"/>
+	
+    <property name="jakarta-commons-logging.apiurl" value="http://jakarta.apache.org/commons/logging/api/"/>
     
+	<!-- Targets -->
     <target name="clean-compile">
         <mkdir dir="${output.dir}"/>
         <delete>
@@ -46,11 +39,11 @@
     </target>
     
     <target name="compile">
-        <javac source="1.4" srcdir="${source.dir}" destdir="${output.dir}" classpath="lib/commons-logging.jar" debug="false" deprecation="true"/>
+        <javac source="1.4" srcdir="${source.dir}" destdir="${output.dir}" debug="false" deprecation="true"/>
     </target>
     
     <target name="compile-tests">
-        <javac srcdir="${test.source.dir}" destdir="${output.dir}" classpath="lib/commons-logging.jar;${output.dir}" debug="false" deprecation="true"/>
+        <javac srcdir="${test.source.dir}" destdir="${output.dir}" debug="false" deprecation="true"/>
     </target>
     
     <target name="clean-package">
@@ -83,15 +76,19 @@
                  Doctitle="${ant.project.name}"
                  Overview="etc/overview.html"
                  classpath="lib/commons-logging.jar">
+     		<link href="${j2se.apiurl}"/>
+     		<link href="${jakarta-commons-logging.apiurl}"/>
         </javadoc>
     </target>
 
+	<!-- Source distribution -->
     <target name="dist-src" depends="clean-compile, clean-package, javadoc">
         <zip zipfile="${dist.dir}/${dist.name}-${project.version}-src.zip">
             <zipfileset dir="." prefix="${dist.name}-${project.version}"/>
         </zip>
     </target>
 
+	<!-- Binary distribution -->
     <target name="dist" depends="clean-compile, package, javadoc">
         <zip zipfile="${dist.dir}/${dist.name}-${project.version}.zip">
             <zipfileset dir="." prefix="${dist.name}-${project.version}" includes="LICENSE,CHANGELOG,README"/>
@@ -102,16 +99,7 @@
         </zip>
     </target>
 
-    <target name="dist-plugin" depends="package, javadoc">
-        <zip zipfile="${dist.dir}/${plugin.name}_${project.version}.zip">
-            <zipfileset dir="." prefix="${plugin.name}_${project.version}" includes="LICENSE,CHANGELOG,README"/>
-            <zipfileset dir="docs" prefix="${plugin.name}_${project.version}/docs"/>
-            <zipfileset dir="${package.dir}" prefix="${plugin.name}_${project.version}/lib"/>
-            <zipfileset dir="lib" prefix="${plugin.name}_${project.version}/lib"/>
-            <zipfileset dir="etc" prefix="${plugin.name}_${project.version}" includes="plugin.properties,plugin.xml"/>
-        </zip>
-    </target>
-
+	<!-- Maven distribution -->
     <target name="dist-maven" depends="clean-compile, package">
         <jar jarfile="${dist.dir}/${dist.maven.file}">
             <zipfileset dir="." includes="LICENSE" fullpath="LICENSE.txt"/>
@@ -120,23 +108,34 @@
         </jar>
     </target>
     
+	<!-- Detailed changelog -->
     <target name="changelog">
     	<cvschangelog destfile="CHANGES"/>
     </target>
     
+	<!-- JUnit tests -->
     <target name="run-tests" depends="compile, compile-tests">
         <junit printsummary="yes" showoutput="yes" fork="yes">
             <classpath>
                 <pathelement location="lib/commons-logging.jar"/>
                 <pathelement location="${output.dir}"/>
             </classpath>
+
+            <test name="net.fortuna.ical4j.AllTests"/>
+<!--
+            <batchtest>
+                <fileset dir="${test.source.dir}">
+                    <include name="**/*Test*.java"/>
+                </fileset>
+            </batchtest>
+-->
             
             <!--
             <test name="net.fortuna.ical4j.data.CalendarOutputterTest"/>
             <test name="net.fortuna.ical4j.model.component.VTimeZoneTest"/>
             <test name="net.fortuna.ical4j.model.component.VEventTest"/>
-            -->
             <test name="net.fortuna.ical4j.data.CalendarBuilderTest"/>
+            -->
         </junit>
     </target>
 </project>
