Changed default logging level

--- a/test/log4j.properties
+++ b/test/log4j.properties
@@ -1,5 +1,5 @@
 ## set root logging preferences..
-log4j.logger.net.fortuna.ical4j=debug, stdout
+log4j.logger.net.fortuna.ical4j=info, stdout
 
 ## appender: stdout..
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
