--- a/build.properties.sample
+++ b/build.properties.sample
@@ -1,3 +1,6 @@
 ## To override properties in build.xml rename
 ## this file to "build.properties" and modify accordingly..
 project.classpath=C:/libs/commons-logging-1.0.3/commons-logging.jar;${output.dir}
+
+## directory that contains emma.jar and emma_ant.jar
+emma.dir=C:/Tools/emma-2.0.5312/lib
