--- a/test/log4j.properties
+++ b/test/log4j.properties
@@ -1,6 +1,9 @@
 ## set root logging preferences..
 log4j.logger.net.fortuna.ical4j=info, stdout
 
+log4j.logger.net.fortuna.ical4j.filter=debug, stdout
+log4j.additivity.net.fortuna.ical4j.filter=false
+
 ## appender: stdout..
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
