Defined additional loggers

--- a/test/log4j.properties
+++ b/test/log4j.properties
@@ -1,11 +1,17 @@
 ## set root logging preferences..
 log4j.logger.net.fortuna.ical4j=info, stdout
 
-log4j.logger.net.fortuna.ical4j.filter=debug, stdout
+log4j.logger.net.fortuna.ical4j.filter=info, stdout
 log4j.additivity.net.fortuna.ical4j.filter=false
 
-log4j.logger.net.fortuna.ical4j.model=debug, stdout
+log4j.logger.net.fortuna.ical4j.model=info, stdout
 log4j.additivity.net.fortuna.ical4j.model=false
+
+log4j.logger.net.fortuna.ical4j.model.TimeZoneTest=info, stdout
+log4j.additivity.net.fortuna.ical4j.model.TimeZoneTest=false
+
+log4j.logger.net.fortuna.ical4j.model.component.Observance=info, stdout
+log4j.additivity.net.fortuna.ical4j.model.component.Observance=false
 
 ## appender: stdout..
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
