--- a/build.properties.sample
+++ b/build.properties.sample
@@ -1,6 +1,6 @@
 ## To override properties in build.xml rename
 ## this file to "build.properties" and modify accordingly..
-project.classpath=C:/libs/commons-logging-1.0.3/commons-logging.jar;${output.dir}
+project.classpath=C:/libs/commons-logging-1.0.4/commons-logging.jar;C:/libs/commons-codec-1.3/commons-codec-1.3.jar;${output.dir}
 
 ## Override JAR filename..
 package.file=ical4j-${project.version}.jar
