--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 			scm:cvs:pserver:anonymous:@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j
 		</connection>
 		<developerConnection>
-			scm:cvs:extssh:fortuna:@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j
+			scm:cvs:ext:fortuna:@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j
 		</developerConnection>
 		<url>http://ical4j.cvs.sourceforge.net/ical4j</url>
 	</scm>
