--- a/build.xml
+++ b/build.xml
@@ -36,6 +36,7 @@
 	<path id="project.classpath">
 		<pathelement location="lib/commons-logging.jar"/>
 		<pathelement location="lib/commons-codec.jar"/>
+		<pathelement location="lib/commons-lang.jar"/>
 		<!--
 		<pathelement location="${output.dir}"/>
 		-->
